# segmentor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  seg.cpp  vcpkg.json
